updated flavor text

--- a/recipe.html
+++ b/recipe.html
@@ -43,8 +43,8 @@
           <h5>(noun)</h5>
         </div>
         <p>
-          . . . . a set of cooking instructions to follow like that Ikea table
-          you never build. Where an oppinion is never one of the ingredients but
+          . . . . a set of cooking instructions to not follow like that Ikea table
+          you never built. Where an oppinion is never one of the ingredients but
           always seems to be added half way through.
         </p>
         <input
